# RaiBot

./: .sample-env  Cargo.toml  README.md
src/: db.rs  main.rs
src/netease/: api.rs  crypto.rs  mod.rs  request.rs
