[package]
name = "telegram_bot"
version = "0.1.0"
authors = ["EnableAsync"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version = "1.3", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
base64 = "0.13.0"
openssl = "0.10.36"
rand = "0.8.4"
hex = "0.4.3"
serde_json = "1.0"
serde = "1.0"
regex = "1.5.4"
serde_qs = "0.8"
dotenv = "0.15.0"
cassandra-cpp = "0.17.0"